# sdl2_sand_simulation

./: CMakeLists.txt  vcpkg.json
.github/workflows/: cmake.yml
app/: CMakeLists.txt  app.cc  app.h  input.cc  input.h  main.cc  renderer.cc  renderer.h  texture.cc  texture.h  window.cc  window.h
core/: CMakeLists.txt
core/include/: world.h
core/src/: world.cc
src/: main.cpp
tests/: CMakeLists.txt  sanity_test.cpp
